--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    command: [ "mongod", "--maxMessageSizeBytes", "67108864" ] # 64 MB
 
   # ZOOKEEPER
   zookeeper:
@@ -52,6 +53,7 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_JUTE_MAXBUFFER: 200000000   # tăng max buffer nếu cần
 
   # KAFKA
   kafka:
@@ -67,6 +69,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MESSAGE_MAX_BYTES: 200000000 #200 MB
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 200000000
 
   #  EUREKA SERVER
   eureka-server:
