feat(infra): Add config server service
- Introduce `config-server` service definition.
- Enables centralized configuration for microservices.
- Builds from `../services/config-server` context.
- Exposes port `8888` for client access.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 
 services:
+  # CONFIG SERVER
+  config-server:
+    build:
+      context: ../services/config-server
+      dockerfile: Dockerfile
+    container_name: horizon-config
+    ports:
+      - "8888:8888"
+
   # USER SERVICE
   user-service:
     build:
